--- a/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
@@ -46,12 +46,12 @@
                         <div class="w-100 h-100">
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
-                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                        <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
+                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-9">
 
                                         @if (!String.IsNullOrEmpty(content.PersonalInformationHeadline))
                                         {
@@ -137,12 +137,12 @@
                         <div class="w-100 h-100">
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
-                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                        <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
+                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-9">
                                         @if (!String.IsNullOrEmpty(content.CommitteesHeadline))
                                         {
                                             <h2 class="h2">@content.CommitteesHeadline</h2>
@@ -165,12 +165,12 @@
                         <div class="w-100 h-100">
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
-                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                        <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
+                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-9">
 
                                         @if (!String.IsNullOrEmpty(content.ContributionsHeadline))
                                         {
@@ -253,12 +253,12 @@
                         <div class="w-100 h-100">
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
-                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                        <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
+                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-9">
 
                                         @if (!String.IsNullOrEmpty(content.SubscriptionsHeadline))
                                         {
