--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
@@ -80,3 +80,31 @@
         }
     }
 }
+
+
+@include media-breakpoint-down(md) {
+
+    #ec {
+        overflow-x: auto;
+        width: 100%;
+
+        > .ec {
+            padding-top: 200px;
+        }
+
+        .ec-day-grid,
+        .ec-time-grid {
+            border: solid 1px red;
+            overflow-x: auto;
+            min-width: 650px;
+        }
+    }
+
+    .ec-toolbar {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: -170px auto 0 auto;
+    }
+
+}
