--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
@@ -93,7 +93,7 @@
         }
 
         .ec-day-grid,
-        .ec-time-grid {
+        .ec-time-grid:not(.ec-day-view) {
             overflow-x: auto;
             min-width: 650px;
         }
@@ -105,5 +105,4 @@
         right: 0;
         margin: -170px auto 0 auto;
     }
-
 }
