--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
@@ -25,6 +25,11 @@
         font-size: 0.75rem;
         white-space: normal;
         text-overflow: unset;
+
+        @include media-breakpoint-down(md) {
+            line-height: 1;
+            font-size: 0.625rem;
+        }
     }
 }
 
@@ -95,7 +100,8 @@
         .ec-day-grid,
         .ec-time-grid:not(.ec-day-view) {
             overflow-x: auto;
-            min-width: 650px;
+            //min-width: 640px;
+            min-width: 200vw;
         }
     }
 
