Deployment 4a917106-6b32-45bd-9be1-9631a945e386: Run number 826

--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -213,7 +213,7 @@
                                             }
                                         </div>
                                     </div>
-                                    <button class="js-scroll-top btn-scroll-top" data-target="" title="Back to Top">
+                                    <button hidden class="js-scroll-top btn-scroll-top" data-targetid="tabpanel-event-registrations" data-paneid="tabpanel-event-registrations" title="Back to Top">
                                         <i class="fa-solid fa-arrow-up"></i>
                                     </button>
                                 </div>
@@ -361,3 +361,6 @@
     </div>
 
 </div>
+<button class="js-scroll-top btn-scroll-top" data-targetid="content" title="Back to Top" hidden>
+    <i class="fa-solid fa-arrow-up"></i>
+</button>
