--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
@@ -454,9 +454,9 @@
     height: 48px;
     border-radius: 4px;
     text-align: center;
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-    z-index:30;
+    position: sticky;
+    left: calc(100vw - 120px);
+    bottom: 40px;
+    z-index: 30;
     border: 0;
 }
