Deployment 2ddb136a-c257-453e-a147-c6ea2f91fe0c: Run number 828

--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -213,7 +213,7 @@
                                             }
                                         </div>
                                     </div>
-                                    <button hidden class="js-scroll-top btn-scroll-top" data-targetid="tabpanel-event-registrations" data-paneid="tabpanel-event-registrations" title="Back to Top">
+                                    <button aria-hidden="true" class="js-scroll-top btn-scroll-top btn-scroll-top--inset" data-targetid="tabpanel-event-registrations" data-paneid="tabpanel-event-registrations" title="Back to Top" hidden>
                                         <i class="fa-solid fa-arrow-up"></i>
                                     </button>
                                 </div>
@@ -289,6 +289,9 @@
                                         </form>
 
                                     </div>
+                                    <button aria-hidden="true" class="js-scroll-top btn-scroll-top btn-scroll-top--inset" data-targetid="tabpanel-info-change" data-paneid="tabpanel-info-change" title="Back to Top"  hidden>
+                                        <i class="fa-solid fa-arrow-up"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -352,15 +355,7 @@
 
 
                 </div>
-
-
-
             </div>
-
         </div>
     </div>
-
 </div>
-<button class="js-scroll-top btn-scroll-top" data-targetid="content" title="Back to Top" hidden>
-    <i class="fa-solid fa-arrow-up"></i>
-</button>
