--- a/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
@@ -61,9 +61,9 @@ else
                 </div>*@
                 <button type="submit" class="btn btn-primary">Login</button>
                 <div class="d-flex mt-3 fs-sm">
-                    <a href="#">Create Account</a>
-                    <a class="ms-3 ps-3 border-start" href="#">Reset Password</a>
-                    <a class="ms-3 ps-3 border-start" href="#">Help</a>
+                    <a href="/create-account/">Create Account</a>
+                    <a class="ms-3 ps-3 border-start" href="/reset-password/">Reset Password</a>
+                    <a class="ms-3 ps-3 border-start" href="https://www.wra.org/help/">Help</a>
                 </div>
             }
         </div>
