--- a/src/WRA.Umbraco.Web/Views/Partials/GatedPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/GatedPage.cshtml
@@ -49,7 +49,7 @@
                 <div class="d-flex justify-content-center mt-4 mb-2 fs-sm">
                     <a href="/create-account/">Create Account</a>
                     <a class="ms-3 ps-3 border-start" href="/reset-password/">Reset Password</a>
-                    <a class="ms-3 ps-3 border-start" href="#">Help</a>
+                    <a class="ms-3 ps-3 border-start" href="https://www.wra.org/help/">Help</a>
                 </div>
             }
         </div>
