Deployment b070a84f-56d7-4f5c-827d-3d6055467d39: Run number 860

--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -16,6 +16,7 @@
 }
 
 <script type="text/javascript">
+    window.productDataCategory = "@(Model.Parent.Name)";
     window.productDataSubCategory = "@(Model.Name)";
     window.orderId = "@Model.Order.Id";
     window.storeId = "@Model.GetStore().Id"
