Deployment 8bdccc96-3ad1-4126-8b9e-d6662889925c: Run number 862

--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_calendar.scss
@@ -1,5 +1,5 @@
 .ec-event.wra-event {
-    transition: opacity 200ms ease 0s;
+    transition: opacity 200ms ease 0s, visibility 200ms ease 0s;
 }
 
 .ec-button.ec-resourceTimeGridWeek {
