Deployment e3aa3c81-1a4c-4a50-9133-a3b47d703c7d: Run number 876

--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -16,8 +16,8 @@
 }
 
 <script type="text/javascript">
-    window.productDataCategory = "@(Model.Parent.Name)";
-    window.productDataSubCategory = "@(Model.Name)";
+    window.productDataCategory = @(Model.Parent.Id);
+    window.productDataSubCategory = @(Model.Id);
     window.orderId = "@Model.Order.Id";
     window.storeId = "@Model.GetStore().Id"
 </script>
